feat: Redesign frontend
